infra/kubernetes/12-notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: cloudmart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/YOUR_GITHUB_USERNAME/notification-service:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
