infra/kubernetes/11-cart-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: cloudmart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: ghcr.io/YOUR_GITHUB_USERNAME/cart-service:latest
          ports:
            - containerPort: 8004
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: cloudmart
spec:
  selector:
    app: cart-service
  ports:
    - port: 8004
      targetPort: 8004
