infra/kubernetes/14-review-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
  namespace: cloudmart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: ghcr.io/YOUR_GITHUB_USERNAME/review-service:latest
          ports:
            - containerPort: 8006
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
  namespace: cloudmart
spec:
  selector:
    app: review-service
  ports:
    - port: 8006
      targetPort: 8006
