infra/kubernetes/15-storefront.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
  namespace: cloudmart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
        - name: storefront
          image: ghcr.io/YOUR_GITHUB_USERNAME/storefront:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: storefront
  namespace: cloudmart
spec:
  selector:
    app: storefront
  ports:
    - port: 3000
      targetPort: 3000
